working on adding routes and modifying template data

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Yoga Music</title>
     <meta name="description" content="">
+    <!-- Add Bootstrap and Jquery refs -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for 'head'}}
@@ -19,6 +20,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/my-new-app.js"></script>
+
 
     {{content-for 'body-footer'}}
   </body>
