--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,13 @@
     <!-- Add Bootstrap and Jquery refs -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
     {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/my-new-app.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        
 
     {{content-for 'head-footer'}}
   </head>
